RESOLVED FIXED233132
[LFC][IFC] Fix fast/text/letter-spacing-negative-opacity.html
https://bugs.webkit.org/show_bug.cgi?id=233132
Summary [LFC][IFC] Fix fast/text/letter-spacing-negative-opacity.html
alan
Reported 2021-11-15 09:46:32 PST
ssia
Attachments
Patch (2.89 KB, patch)
2021-11-15 11:41 PST, alan
no flags
alan
Comment 1 2021-11-15 11:41:50 PST
EWS
Comment 2 2021-11-15 12:47:55 PST
Committed r285826 (244264@main): <https://commits.webkit.org/244264@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444285 [details].
Radar WebKit Bug Importer
Comment 3 2021-11-15 12:48:23 PST
Note You need to log in before you can comment on or make changes to this bug.