[LFC][IFC] Fix fast/text/letter-spacing-negative-opacity.html https://bugs.webkit.org/show_bug.cgi?id=233132

Reviewed by Antti Koivisto.

Special case the negative letter spacing content when computing the content logical width.

* layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):
1. Negative letter space value could produce negative content width
2. Subsequent text content (e.g. "this text has whitepspace content") may go from positive to negative content width as parts of the content may produce positive width even with negative letter spacing.



Canonical link: https://commits.webkit.org/244264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285826 268f45cc-cd09-0410-ab3c-d52691b4dbfc